export interface OperationRequest {
    deadlineDate: string;
    priority: string;
    dateOfRequest: string;
    status: string;
    description: string;
    operationTypeId: string;
}
